# mail-tm-wrapper-rs

./: Cargo.toml  TODO
src/: errors.rs  lib.rs  service.rs  structs.rs
src/adapters/: mod.rs
src/adapters/api/: errors.rs  functions.rs  mod.rs  schemas.rs  tests.rs
tests/: mod.rs
tests/schemas/: account_post.json  domains_by_id_get.json  domains_get.json  messages_get.json  messages_get_by_id.json  messages_patch.json  messages_source_by_id.json  token.json
tests/unit/: domain.rs
