[package]
name = "mail-tm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.20", features = ["serde_json", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.105"

[dev-dependencies]
tokio = "1.32.0"

